--- a/application/flask_app/templates/submit_jobs.html
+++ b/application/flask_app/templates/submit_jobs.html
@@ -25,6 +25,7 @@
 			<input type="submit" name="submit" id="submit" value="Delete"/>
 		</form>
 		<h1> Submitted Jobs </h1>
+        {% if jobs %}
 		{% if "error" in jobs %}
 			<p> {{ jobs["error"] }} </p>
 		{% else %}
@@ -42,6 +43,7 @@
 			{% endfor %}
 			</table>
 		{% endfor %}
+		{% endif %}
 		{% endif %}
     </body>
 </html>
